# SPMS

./: .gitignore  2-root-estimation.ipynb  README.md  diagnostics_chazot.ipynb  plotting.py  pyproject.toml  requirements.txt  tests_original_code.ipynb
1-ranktest/: summary-plots.ipynb  sunmary-plots.ipynb
2-root-experiment/: diagnostics_all_exp.ipynb
bridge_sampling/: helper_functions.py
data/: asymmetric_sim.nw
experiments/: 1-ranktest.ipynb  analysis-comparison.ipynb  analysis.ipynb  dev.ipynb  mcmc.py  plot_ranks.py  simulate.py
experiments/comparison/: README  analyze_results.ipynb  circle_landmarks_n20.csv  fastAnc.R  flat_true_tree_.csv  gpa_leaves.csv  infer_posterior.ipynb  mcmc.py  mcmc_parallel_228301277.sh  mvmorph.R  procrustes.R  procrustes_align_all.R  run_mcmc.py  simulate_data.ipynb
experiments/data/: chazot_subtree_rounded.nw
experiments/follow_up_experiments/: README
experiments/geomorph-comparison/: README
experiments/mcmc_parallel/: combined_results.pkl
experiments/original/: 3-simulation-study.ipynb  4-chazot-data-analysis.ipynb  README  calc_ri.py  diagnostics_chazot.ipynb  flat_true_tree.csv  mcmc.py  mcmc_chazot.py  plotting.py  sample_pars.py
experiments/original_experiments/: 0-dataprep.ipynb  1-ranktest.ipynb  2-root-estimation.ipynb  3-simulation-study.ipynb  4-chazot-data-analysis.ipynb  README  diagnostics.py  diagnostics_1-ranktest.py  diagnostics_chazot.ipynb  get_vcv.R  plotting.py  simulate_data.py
experiments/procrustes/: README  analyze_results.ipynb  centroid_size_sim_wing.csv  infer_posterior.ipynb  run_mcmc.py  (+3 more)
(+449 files in other folders)
