[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "physhapes"
version = "0.1.0"
description = "A package for bridge sampling using the scheme from XX"
authors = [
    { name = "Sofia Stroustrup", email = "sofia@sund.ku.dk" },
    { name = "Stefan Sommer", email = "sommer@di.ku.dk" }
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy",
    "matplotlib",
    "ete3", 
    "pandas",
    "arviz",
    "seaborn",
    "ipykernel",
    "jupyter",
    "legacy-cgi; python_version >= '3.13'"
]

[project.urls]
Homepage = "https://github.com/sofiastroustrup/SPMS"